# nifi-data-pipeline

./: .gitignore  README.md  commands.txt  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: workflow.yml
config/: elasticsearch.yml  kibana.yml
dags/: csv_to_json_pipeline.py
database-setup/: sourcedb.sql
docker/: Dockerfile  requirements.txt
sourcefiles/chapter3/: write_to_json.py
sourcefiles/nifi_flows/: nifi_filter_csv.xml  nifi_process_json.xml
sourcefiles/reading_writing_files/: generate_data.py  generate_json_data.py  read_json.py  rw_json_with_pandas.py  rw_with_pandas.py  write_file.py
src/chapter3/: __init__.py  write_to_json.py
src/csv_to_json/: __init__.py  write_to_json.py
src/nifi_flows/: nifi_filter_csv.xml  nifi_process_json.xml
src/reading_writing_files/: generate_data.py  generate_json_data.py  read_file.py  read_json.py  rw_json_with_pandas.py  rw_with_pandas.py  write_file.py
