[metadata]
name = reading_writing_files

[options]
packages =
    reading_writing_files
install_requires =
    black==21.9b0
    click==8.0.1
    colorama==0.4.4
    Faker==8.14.0
    mypy-extensions==0.4.3
    numpy==1.21.2
    pandas==1.3.3
    pathspec==0.9.0
    platformdirs==2.3.0
    python-dateutil==2.8.2
    pytz==2021.1
    regex==2021.9.24
    six==1.16.0
    text-unidecode==1.3
    tomli==1.2.1
    typing-extensions==3.10.0.2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    ; flake8==3.9.2
    ; mypy==0.910
    ; pytest==6.2.5
    ; pytest-cov==2.12.1
    tox==3.24.4
    tox-gh-actions==2.8.1

[options.package_data]
python_package = py.typed

; [flake8]
; max-line-length = 160