[metadata]
name = src
version = 0.4.0

[options]
packages =
    src
install_requires =
    black==21.9b0
    Faker==8.14.0
    pandas==1.3.3
python_requires = >=3.6
package_dir = 
    =.
zip_safe = no

[options.extras_require]
testing = 
    flake8==3.9.2
    mypy==0.910
    pytest==6.2.5
    pytest-cov==2.12.1
    tox==3.24.4
    tox-gh-actions==2.8.1

[options.package_data]
src = py.typed

[flake8]
max-line-length = 160